# snap-dbx-framework

./: .gitignore  CLAUDE.md  README.md  architecture.md  databricks.yml  pyproject.toml
.claude/: settings.json
config/: framework.yml  objects.yml
config/01_bronze/01a_raw/: component_bom.yml  customer.yml  material.yml  plant.yml  sales.yml
config/01_bronze/01b_cdc/: component_bom.yml  customer.yml  material.yml  plant.yml  sales.yml
config/01_bronze/cdc/: cdc_component_bom.yml  cdc_customer.yml  cdc_material.yml  cdc_plant.yml  cdc_sales.yml  component_bom.yml  customer.yml  material.yml  plant.yml  sales.yml
config/01_bronze/raw/: component_bom.yml  customer.yml  material.yml  plant.yml  raw_component_bom.yml  raw_customer.yml  raw_material.yml  raw_plant.yml  raw_sales.yml  sales.yml
config/02_silver/02a_processed/: component_bom.yml  customer.yml  material.yml  (+2 more)
config/config_templates/: bronze_cdc.yml  loading.yml  objects.yml  silver_cdc.yml  silver_processed.yml  silver_skey.yml
config_template/: hop.yaml  loading.yml  objects.yml
config_templates/: bronze_cdc.yml  objects.yml  silver_processed.yml  silver_skey.yml
docs/: .gitignore  CLAUDE.md  DEPLOYMENT_INSTRUCTIONS.md  architecture.md
framework/: YAML_Generator.py  drop_all.py  unity_catalog_manager.py  utils.py
notebooks/: 00_metadata.ipynb  01a_raw.ipynb
pipelines/: 01a_raw_pipeline.py  bronze_pipeline.py
resources/: __init__.py  config_generator.py
src/: utils.py
src/bronze/: cdc.py  raw.py
src/silver/: cdc.py  processed.py  skey.py
tools/: setup.ipynb  yaml_generator.py
(+65 files in other folders)
